--- a/_gulp/_pug/index-v3.pug
+++ b/_gulp/_pug/index-v3.pug
@@ -87,7 +87,7 @@ html(lang="ru")
                   .tab-content
                     .tab-pane.fade.show.active#tab1(role='tabpanel' aria-labelledby='tab1-tab')
                       .cost__row
-                        .cost__block
+                        button(type="button").cost__block.j-cost-block
                           .cost__block-title
                             b 64 
                             | урока
@@ -97,7 +97,7 @@ html(lang="ru")
                             div.div2 700 
                               i.icon-rouble 
                               | /урок
-                        .cost__block
+                        button(type="button").cost__block.j-cost-block
                           .cost__block-title
                             b 32 
                             | урока
@@ -107,7 +107,7 @@ html(lang="ru")
                             div.div2 700 
                               i.icon-rouble 
                               | /урок
-                        .cost__block
+                        button(type="button").cost__block.j-cost-block
                           .cost__block-title
                             b 24 
                             | урока
@@ -117,7 +117,7 @@ html(lang="ru")
                             div.div2 700 
                               i.icon-rouble 
                               | /урок
-                        .cost__block
+                        button(type="button").cost__block.j-cost-block
                           .cost__block-title
                             b 12 
                             | урока
@@ -127,7 +127,7 @@ html(lang="ru")
                             div.div2 700 
                               i.icon-rouble 
                               | /урок
-                        .cost__block
+                        button(type="button").cost__block.j-cost-block
                           .cost__block-title
                             b 8 
                             | урока
@@ -137,7 +137,7 @@ html(lang="ru")
                             div.div2 700 
                               i.icon-rouble 
                               | /урок
-                        .cost__block
+                        button(type="button").cost__block.j-cost-block
                           .cost__block-title
                             b 4 
                             | урока
@@ -150,42 +150,42 @@ html(lang="ru")
 
                     .tab-pane#tab2(role='tabpanel' aria-labelledby='tab2-tab')
                       .cost__row
-                        .cost__block
+                        button(type="button").cost__block.j-cost-block
                           .cost__block-title
                             b 64 
                             | урока
                           .cost__block-content
                             div.div1 23 000 $
                             div.div2 700 $ /урок
-                        .cost__block
+                        button(type="button").cost__block.j-cost-block
                           .cost__block-title
                             b 32 
                             | урока
                           .cost__block-content
                             div.div1 17 000 $
                             div.div2 700 $ /урок
-                        .cost__block
+                        button(type="button").cost__block.j-cost-block
                           .cost__block-title
                             b 24 
                             | урока
                           .cost__block-content
                             div.div1 8 300 $
                             div.div2 700 $ /урок
-                        .cost__block
+                        button(type="button").cost__block.j-cost-block
                           .cost__block-title
                             b 12 
                             | урока
                           .cost__block-content
                             div.div1 7 000 $
                             div.div2 700 $ /урок
-                        .cost__block
+                        button(type="button").cost__block.j-cost-block
                           .cost__block-title
                             b 8 
                             | урока
                           .cost__block-content
                             div.div1 5 000 $
                             div.div2 700 $ /урок
-                        .cost__block
+                        button(type="button").cost__block.j-cost-block
                           .cost__block-title
                             b 4 
                             | урока
