--- a/_gulp/_pug/index-v3.pug
+++ b/_gulp/_pug/index-v3.pug
@@ -65,9 +65,9 @@ html(lang="ru")
                     br
                     | направление
                 .direction__one-btn
-                  button(type="button").active Вокал
-                  button(type="button") Гитара
-                  button(type="button") На выбор ученика
+                  button(type="button" data-direction="Вокал").active Вокал
+                  button(type="button" data-direction="Гитара") Гитара
+                  button(type="button" data-direction="На выбор ученика") На выбор ученика
 
               .direction__two
                 .direction__two-head
@@ -87,7 +87,7 @@ html(lang="ru")
                   .tab-content
                     .tab-pane.fade.show.active#tab1(role='tabpanel' aria-labelledby='tab1-tab')
                       .cost__row
-                        button(type="button").cost__block.j-cost-block
+                        button(type="button" data-number="64").cost__block.j-cost-block.active
                           .cost__block-title
                             b 64 
                             | урока
@@ -97,7 +97,7 @@ html(lang="ru")
                             div.div2 700 
                               i.icon-rouble 
                               | /урок
-                        button(type="button").cost__block.j-cost-block
+                        button(type="button" data-number="32").cost__block.j-cost-block
                           .cost__block-title
                             b 32 
                             | урока
@@ -107,7 +107,7 @@ html(lang="ru")
                             div.div2 700 
                               i.icon-rouble 
                               | /урок
-                        button(type="button").cost__block.j-cost-block
+                        button(type="button" data-number="24").cost__block.j-cost-block
                           .cost__block-title
                             b 24 
                             | урока
@@ -117,7 +117,7 @@ html(lang="ru")
                             div.div2 700 
                               i.icon-rouble 
                               | /урок
-                        button(type="button").cost__block.j-cost-block
+                        button(type="button" data-number="12").cost__block.j-cost-block
                           .cost__block-title
                             b 12 
                             | урока
@@ -127,7 +127,7 @@ html(lang="ru")
                             div.div2 700 
                               i.icon-rouble 
                               | /урок
-                        button(type="button").cost__block.j-cost-block
+                        button(type="button" data-number="8").cost__block.j-cost-block
                           .cost__block-title
                             b 8 
                             | урока
@@ -137,7 +137,7 @@ html(lang="ru")
                             div.div2 700 
                               i.icon-rouble 
                               | /урок
-                        button(type="button").cost__block.j-cost-block
+                        button(type="button" data-number="4").cost__block.j-cost-block
                           .cost__block-title
                             b 4 
                             | урока
@@ -150,42 +150,42 @@ html(lang="ru")
 
                     .tab-pane#tab2(role='tabpanel' aria-labelledby='tab2-tab')
                       .cost__row
-                        button(type="button").cost__block.j-cost-block
+                        button(type="button" data-number="64").cost__block.j-cost-block
                           .cost__block-title
                             b 64 
                             | урока
                           .cost__block-content
                             div.div1 23 000 $
                             div.div2 700 $ /урок
-                        button(type="button").cost__block.j-cost-block
+                        button(type="button" data-number="32").cost__block.j-cost-block
                           .cost__block-title
                             b 32 
                             | урока
                           .cost__block-content
                             div.div1 17 000 $
                             div.div2 700 $ /урок
-                        button(type="button").cost__block.j-cost-block
+                        button(type="button" data-number="24").cost__block.j-cost-block
                           .cost__block-title
                             b 24 
                             | урока
                           .cost__block-content
                             div.div1 8 300 $
                             div.div2 700 $ /урок
-                        button(type="button").cost__block.j-cost-block
+                        button(type="button" data-number="12").cost__block.j-cost-block
                           .cost__block-title
                             b 12 
                             | урока
                           .cost__block-content
                             div.div1 7 000 $
                             div.div2 700 $ /урок
-                        button(type="button").cost__block.j-cost-block
+                        button(type="button" data-number="8").cost__block.j-cost-block
                           .cost__block-title
                             b 8 
                             | урока
                           .cost__block-content
                             div.div1 5 000 $
                             div.div2 700 $ /урок
-                        button(type="button").cost__block.j-cost-block
+                        button(type="button" data-number="4").cost__block.j-cost-block
                           .cost__block-title
                             b 4 
                             | урока
@@ -202,6 +202,8 @@ html(lang="ru")
 
                 .direction__form
                   form(action="" autocomplete="off")
+                    input(type="hidden" name="form-direction" value="Вокал")
+                    input(type="hidden" name="form-number-lessons" value="64")
                     .direction__form-wrapper
                       fieldset
                         .form-group
