--- a/_gulp/_pug/index-v2.pug
+++ b/_gulp/_pug/index-v2.pug
@@ -39,6 +39,7 @@ html(lang="ru")
               .main-section__img
                 img(data-src="./images/img-girl-2.png", alt="").main-section__img-2.lazyload
               .main-section__form
+                img(src="./tmp/gift.png", alt="").gift
                 .main-section__form-content
                   .form
                     .main-section__form-head Индивидуальный 
