--- a/_gulp/_pug/index-v2.pug
+++ b/_gulp/_pug/index-v2.pug
@@ -37,7 +37,7 @@ html(lang="ru")
 
             .main-section__wrapper
               .main-section__img
-                img(data-src="./images/img-girl-2.png", alt="").main-section__img-2.lazyload
+                img(data-src="./images/img-girl-2.png?v2", alt="").main-section__img-2.lazyload
               .main-section__form
                 img(src="./tmp/gift.png", alt="").gift
                 .main-section__form-content
